test/classes/initializers/oldAndNew2.good
oldAndNew2.chpl:8: error: Definition of both constructor 'badClass' and initializer 'init'.  Please choose one.
